--- a/数据清理.md
+++ b/数据清理.md
@@ -14,7 +14,7 @@
 
 工具箱要求模块化，每个功能模块可以单独处理，单独测试。
 
-##### <a href="one"><1>行数检测、编码检测; 单语文件检测; 空行去除</a>
+##### [<1>行数检测、编码检测; 单语文件检测; 空行去除](#one)</a>
 ##### <a href="two"><2>检查TERM, NUMBER</a>
 ##### <a href="three"><3> 检查xml</a>
 ##### <a href="four"><4>检查是否语言混杂</a>
@@ -41,7 +41,7 @@
 
 ### [4.模块的功能需求]
 
-####  <a name="#one"><1> 行数检测、编码检测; 单语文件检测; 空行去除</a>
+####  <a id="one"><1> 行数检测、编码检测; 单语文件检测; 空行去除</a>
 
 <font face="宋体" size=4>i. 行数：源端和目标端文本行数对应；</font>
 
