--- a/数据清理.md
+++ b/数据清理.md
@@ -14,18 +14,18 @@
 
 工具箱要求模块化，每个功能模块可以单独处理，单独测试。
 
-##### [<1>行数检测、编码检测; 单语文件检测; 空行去除](#one)</a>
-##### <a href="two"><2>检查TERM, NUMBER</a>
-##### <a href="three"><3> 检查xml</a>
-##### <a href="four"><4>检查是否语言混杂</a>
-##### <a href="five"><5>检查标点</a>
-##### <a href="six"><6>大小写转化，全半角转化</a>
-##### <a href="seven"><7> 分词</a>
-##### <a href="eight"><8>建立bpe; 数据bpe切分</a>
-##### <a href="nine"><9>建立词表</a>
-##### <a href="ten"><10>检查UNK</a>
-##### <a href="eleven"><11>过滤长短句</a>
-##### <a href="twelve"><12>词典检查</a>
+##### [<1>行数检测、编码检测; 单语文件检测; 空行去除](#one)
+##### [<2>检查TERM, NUMBER](#two)
+##### [<3> 检查xml](#three)
+##### [<4>检查是否语言混杂](#four)
+##### [<5>检查标点](#five)
+##### [<6>大小写转化，全半角转化](#six)
+##### [<7> 分词](#seven)
+##### [<8>建立bpe; 数据bpe切分](#eight)
+##### [<9>建立词表](#nine)
+##### [10>检查UNK](#ten)
+##### [11>过滤长短句](#eleven)
+##### [12>词典检查](#twelve)
 
 ### 【3.数据要求】
 
@@ -47,15 +47,15 @@
 
 <font face="宋体" size=4>ii. 不允许有空行；</font>
 
-####  <a name="#two"><2>检查TERM, NUMBER</a>
+####  <a id="two"><2>检查TERM, NUMBER</a>
 
 <font face="宋体" size=4>i. 源端和目标端必须对应含有TERM, NUMBER。</font>
 
-####  <a name="#three"><3>检查xml</a>
+####  <a id="three"><3>检查xml</a>
 
 <font face="宋体" size=4>i. 源端和目标端,不含有HTML，比如<b>,<h>,<npos>,等</font>
 
-####  <a name="#four"><4>检查是否语言混杂</a>
+####  <a id="four"><4>检查是否语言混杂</a>
 
 <font face="宋体" size=4>i. 源端和目标端每行的数据从含义上双语对照；（抽样+肉眼检查下）</font>
 
@@ -63,7 +63,7 @@
 
 <font face="宋体" size=4>iii. 统计句子长度：中文语系使用char切分成单个字，英文语系按照token分词成world；</font>
 
-####  <a name="#five"><5>检查标点</a>
+####  <a id="five"><5>检查标点</a>
 
 <font face="宋体" size=4>i. 句尾标点对齐：</font>
 
@@ -85,7 +85,7 @@
 
 <font face="宋体" size=4> &nbsp;&nbsp;&nbsp;3.  成对出现的符号只有一个出现；</font>
 
-####  <a name="#six"><6>大小写转化，全半角转化</a>
+####  <a id="six"><6>大小写转化，全半角转化</a>
 
 <font face="宋体" size=4>i.  设置flag，可配置。</font>
 
@@ -93,7 +93,7 @@
 
 <font face="宋体" size=4> iii.  全半角优化。</font>
 
-####  <a name="#seven"><7> 分词</a>
+####  <a id="seven"><7> 分词</a>
 
 <font face="宋体" size=4> i.    中系处理（中，日，韩）</font>
 
@@ -111,17 +111,17 @@
 
 <font face="宋体" size=4> iii.   少数民族（维，藏，蒙，阿拉伯，越南，泰语）</font>
 
-####  <a name="#eight"><8>建立bpe; 数据bpe切分</a>
+####  <a id="eight"><8>建立bpe; 数据bpe切分</a>
 
-####  <a name="#nine"><9>建立词表</a>
+####  <a id="nine"><9>建立词表</a>
 
-#### <a name="#ten"><10>检查UNK</a>
+#### <a id="ten"><10>检查UNK</a>
 
 <font face="宋体" size=4>i. 在训练数据里面出现的UNK的数量不能超过2个；（需要根据词表来确认未登录词；）</font>
 
 <font face="宋体" size=4> ii. 对于连续的两个UNK的句子予以剔除；</font>
 
-#### <a name="#eleven"><11>过滤长短句</a>
+#### <a id="eleven"><11>过滤长短句</a>
 
 <font face="宋体" size=4>i. 长度在合理范围；</font>
 
@@ -131,7 +131,7 @@
 
 <font face="宋体" size=4>iv. 对于长度大于比如N=120字的句子对进行清洗；</font>
 
-#### <a name="#twelve"><12>词典检查</a>
+#### <a id="twelve"><12>词典检查</a>
 
 <font face="宋体" size=4>i. 统计词表：词表中汉字，标点，数字，英文单词分别占多少</font>
 
