--- a/数据清理.md
+++ b/数据清理.md
@@ -41,13 +41,13 @@
 
 ### [4.模块的功能需求]
 
-####  <a id="one"><1> 行数检测、编码检测; 单语文件检测; 空行去除</a>
+####  <a href="" id="one"><1> 行数检测、编码检测; 单语文件检测; 空行去除</a>
 
 <font face="宋体" size=4>i. 行数：源端和目标端文本行数对应；</font>
 
 <font face="宋体" size=4>ii. 不允许有空行；</font>
 
-####  <a id="two"><2>检查TERM, NUMBER</a>
+####  <a href="" id="two"><2>检查TERM, NUMBER</a>
 
 <font face="宋体" size=4>i. 源端和目标端必须对应含有TERM, NUMBER。</font>
 
