--- a/数据清理.md
+++ b/数据清理.md
@@ -51,11 +51,11 @@
 
 <font face="宋体" size=4>i. 源端和目标端必须对应含有TERM, NUMBER。</font>
 
-####  <a id="three"><3>检查xml</a>
+####  <ahref=""  id="three"><3>检查xml</a>
 
 <font face="宋体" size=4>i. 源端和目标端,不含有HTML，比如<b>,<h>,<npos>,等</font>
 
-####  <a id="four"><4>检查是否语言混杂</a>
+####  <a href="" id="four"><4>检查是否语言混杂</a>
 
 <font face="宋体" size=4>i. 源端和目标端每行的数据从含义上双语对照；（抽样+肉眼检查下）</font>
 
@@ -63,7 +63,7 @@
 
 <font face="宋体" size=4>iii. 统计句子长度：中文语系使用char切分成单个字，英文语系按照token分词成world；</font>
 
-####  <a id="five"><5>检查标点</a>
+####  <a href=""  id="five"><5>检查标点</a>
 
 <font face="宋体" size=4>i. 句尾标点对齐：</font>
 
@@ -85,7 +85,7 @@
 
 <font face="宋体" size=4> &nbsp;&nbsp;&nbsp;3.  成对出现的符号只有一个出现；</font>
 
-####  <a id="six"><6>大小写转化，全半角转化</a>
+####  <a href="" id="six"><6>大小写转化，全半角转化</a>
 
 <font face="宋体" size=4>i.  设置flag，可配置。</font>
 
@@ -93,7 +93,7 @@
 
 <font face="宋体" size=4> iii.  全半角优化。</font>
 
-####  <a id="seven"><7> 分词</a>
+####  <a href="" id="seven"><7> 分词</a>
 
 <font face="宋体" size=4> i.    中系处理（中，日，韩）</font>
 
@@ -111,17 +111,17 @@
 
 <font face="宋体" size=4> iii.   少数民族（维，藏，蒙，阿拉伯，越南，泰语）</font>
 
-####  <a id="eight"><8>建立bpe; 数据bpe切分</a>
+####  <a href="" id="eight"><8>建立bpe; 数据bpe切分</a>
 
-####  <a id="nine"><9>建立词表</a>
+####  <a href="" id="nine"><9>建立词表</a>
 
-#### <a id="ten"><10>检查UNK</a>
+#### <a href="" id="ten"><10>检查UNK</a>
 
 <font face="宋体" size=4>i. 在训练数据里面出现的UNK的数量不能超过2个；（需要根据词表来确认未登录词；）</font>
 
 <font face="宋体" size=4> ii. 对于连续的两个UNK的句子予以剔除；</font>
 
-#### <a id="eleven"><11>过滤长短句</a>
+#### <a href="" id="eleven"><11>过滤长短句</a>
 
 <font face="宋体" size=4>i. 长度在合理范围；</font>
 
@@ -131,7 +131,7 @@
 
 <font face="宋体" size=4>iv. 对于长度大于比如N=120字的句子对进行清洗；</font>
 
-#### <a id="twelve"><12>词典检查</a>
+#### <a href="" id="twelve"><12>词典检查</a>
 
 <font face="宋体" size=4>i. 统计词表：词表中汉字，标点，数字，英文单词分别占多少</font>
 
